# GSV-TTS-Lite

./: .gitignore  LICENSE  Loader.py  README.md  README_EN.md  README_JA.md  README_ZH.md  TTS.py  TextPreprocessor.py  config.py  download.py  pyproject.toml  requirements.txt  tools.py  web.py
API/: PERSONAL_API.md  personal_api.py  realtime_api.py  requirements.txt  test_realtime_api.py
GPT_SoVITS/: utils.py
GPT_SoVITS/GPT/: embedding.py  t2s_model.py  utils.py
GPT_SoVITS/SoVITS/: models.py
GPT_SoVITS/SoVITS/module/: attentions.py  commons.py  mel_processing.py  modules.py  mrte_model.py  quantize.py
GPT_SoVITS/eres2net/: ERes2NetV2.py  kaldi.py  sv.py
GPT_SoVITS/feature_extractor/: cnhubert.py  cnroberta.py
GPT_SoVITS/text/: __init__.py  alignment.py  cantonese.py  chinese.py  chinese2.py  cleaner.py  english.py  japanese.py  korean.py
GPT_SoVITS/text/g2pw/: g2pw.py  onnx_api.py
GPT_SoVITS/text/zh_normalization/: char_convert.py
GPT_SoVITS_RT/: TTS.py
GPT_SoVITS_RT/GPT_SoVITS/GPT/: t2s_model.py  t2s_model_flash_attn.py
GPT_SoVITS_RT/GPT_SoVITS/text/: alignment.py
WebUI/: web.py
gsv_tts/: Config.py  Download.py  LangSegment.py  Loader.py  Player.py  TTS.py  TextProcessor.py  __init__.py  config.py  download.py  langsegmenter.py
gsv_tts/GPT_SoVITS/: utils.py
gsv_tts/GPT_SoVITS/Featurizer/: __init__.py  cnhubert.py  cnroberta.py
gsv_tts/GPT_SoVITS/G2P/: __init__.py
gsv_tts/GPT_SoVITS/GPT/: embedding.py  t2s_model.py  t2s_model_flash_attn.py  utils.py
gsv_tts/GPT_SoVITS/Int8_Quant/: int8_fused_kernel.py  int8_loader.py
(+23 files in other folders)
