[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gsv-tts-lite"
version = "0.3.13"
authors = [
  { name="mahir0", email="2370950583@qq.com" },
]
description = "A high-performance inference engine specifically designed for the GPT-SoVITS text-to-speech model"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "einops",
    "tqdm",
    "av",
    "transformers",
    "sounddevice",
    "safetensors",
    "numpy",
    "py3langid",
    "pysbd",
    "onnxruntime",
    "soundfile",
    "requests",
    "nltk",
    "future",
    "inflect",
    "wordsegment",
    "pypinyin",
    "jieba",
    "pyopenjtalk-plus",
]

[project.urls]
"Homepage" = "https://github.com/chinokikiss/GSV-TTS-Lite"